--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^6.2.4",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
+    "nodemailer": "^6.7.3",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0"
   }
