--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
+    "mongo-views": "^0.1.4",
     "mongoose": "^6.2.4",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
