--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^5.18.2",
+    "cloudinary": "^1.30.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -20,8 +21,10 @@
     "mongoose": "^6.2.4",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.7.3",
     "passport": "^0.5.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7"
   }
 }
